cabal-version:  3.0
name:           base
version:        4.18.0.0
-- NOTE: Don't forget to update ./changelog.md

license:        BSD-3-Clause
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    https://gitlab.haskell.org/ghc/ghc/issues/new
synopsis:       Basic libraries
category:       Prelude
build-type:     Configure
description:
    This package contains the Standard Haskell "Prelude" and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.

extra-source-files:
    changelog.md

source-repository head
    type:     git
    location: https://gitlab.haskell.org/ghc/ghc.git
    subdir:   libraries/base

Library
    default-language: Haskell2010

    build-depends:
        ghc-base

    reexported-modules:
        Control.Applicative,
        Control.Arrow,
        Control.Category,
        Control.Concurrent,
        Control.Concurrent.Chan,
        Control.Concurrent.MVar,
        Control.Concurrent.QSem,
        Control.Concurrent.QSemN,
        Control.Exception,
        Control.Exception.Base,
        Control.Monad,
        Control.Monad.Fail,
        Control.Monad.Fix,
        Control.Monad.Instances,
        Control.Monad.IO.Class,
        Control.Monad.ST,
        Control.Monad.ST.Lazy,
        Control.Monad.ST.Lazy.Safe,
        Control.Monad.ST.Lazy.Unsafe,
        Control.Monad.ST.Safe,
        Control.Monad.ST.Strict,
        Control.Monad.ST.Unsafe,
        Control.Monad.Zip,
        Data.Array.Byte,
        Data.Bifoldable,
        Data.Bifoldable1,
        Data.Bifunctor,
        Data.Bitraversable,
        Data.Bits,
        Data.Bool,
        Data.Char,
        Data.Coerce,
        Data.Complex,
        Data.Data,
        Data.Dynamic,
        Data.Either,
        Data.Eq,
        Data.Fixed,
        Data.Foldable,
        Data.Foldable1,
        Data.Function,
        Data.Functor,
        Data.Functor.Classes,
        Data.Functor.Contravariant,
        Data.Functor.Compose,
        Data.Functor.Const,
        Data.Functor.Identity,
        Data.Functor.Product,
        Data.Functor.Sum,
        Data.IORef,
        Data.Int,
        Data.Ix,
        Data.Kind,
        Data.List,
        Data.List.NonEmpty,
        Data.Maybe,
        Data.Monoid,
        Data.Ord,
        Data.Proxy,
        Data.Ratio,
        Data.Semigroup,
        Data.STRef,
        Data.STRef.Lazy,
        Data.STRef.Strict,
        Data.String,
        Data.Traversable,
        Data.Tuple,
        Data.Type.Bool,
        Data.Type.Coercion,
        Data.Type.Equality,
        Data.Type.Ord,
        Data.Typeable,
        Data.Unique,
        Data.Version,
        Data.Void,
        Data.Word,
        Debug.Trace,
        Foreign,
        Foreign.C,
        Foreign.C.ConstPtr,
        Foreign.C.Error,
        Foreign.C.String,
        Foreign.C.Types,
        Foreign.Concurrent,
        Foreign.ForeignPtr,
        Foreign.ForeignPtr.Safe,
        Foreign.ForeignPtr.Unsafe,
        Foreign.Marshal,
        Foreign.Marshal.Alloc,
        Foreign.Marshal.Array,
        Foreign.Marshal.Error,
        Foreign.Marshal.Pool,
        Foreign.Marshal.Safe,
        Foreign.Marshal.Unsafe,
        Foreign.Marshal.Utils,
        Foreign.Ptr,
        Foreign.Safe,
        Foreign.StablePtr,
        Foreign.Storable,
        GHC.Arr,
        GHC.ArrayArray,
        GHC.Base,
        GHC.Bits,
        GHC.ByteOrder,
        GHC.Char,
        GHC.Clock,
        GHC.Conc,
        GHC.Conc.IO,
        GHC.Conc.Signal,
        GHC.Conc.Sync,
        GHC.ConsoleHandler,
        GHC.Constants,
        GHC.Desugar,
        GHC.Encoding.UTF8,
        GHC.Enum,
        GHC.Environment,
        GHC.Err,
        GHC.Event.TimeOut,
        GHC.Exception,
        GHC.Exception.Type,
        GHC.ExecutionStack,
        GHC.ExecutionStack.Internal,
        GHC.Exts,
        GHC.Fingerprint,
        GHC.Fingerprint.Type,
        GHC.Float,
        GHC.Float.ConversionUtils,
        GHC.Float.RealFracMethods,
        GHC.Foreign,
        GHC.ForeignPtr,
        GHC.GHCi,
        GHC.GHCi.Helpers,
        GHC.Generics,
        GHC.InfoProv,
        GHC.IO,
        GHC.IO.Buffer,
        GHC.IO.BufferedIO,
        GHC.IO.Device,
        GHC.IO.Encoding,
        GHC.IO.Encoding.CodePage,
        GHC.IO.Encoding.Failure,
        GHC.IO.Encoding.Iconv,
        GHC.IO.Encoding.Latin1,
        GHC.IO.Encoding.Types,
        GHC.IO.Encoding.UTF16,
        GHC.IO.Encoding.UTF32,
        GHC.IO.Encoding.UTF8,
        GHC.IO.Exception,
        GHC.IO.FD,
        GHC.IO.Handle,
        GHC.IO.Handle.FD,
        GHC.IO.Handle.Internals,
        GHC.IO.Handle.Lock,
        GHC.IO.Handle.Text,
        GHC.IO.Handle.Types,
        GHC.IO.IOMode,
        GHC.IO.Unsafe,
        GHC.IO.StdHandles,
        GHC.IO.SubSystem,
        GHC.IOArray,
        GHC.IORef,
        GHC.Int,
        GHC.Integer,
        GHC.Integer.Logarithms,
        GHC.IsList,
        GHC.Ix,
        GHC.List,
        GHC.Maybe,
        GHC.MVar,
        GHC.Natural,
        GHC.Num,
        GHC.OldList,
        GHC.OverloadedLabels,
        GHC.Pack,
        GHC.Profiling,
        GHC.Ptr,
        GHC.Read,
        GHC.Real,
        GHC.Records,
        GHC.ResponseFile,
        GHC.RTS.Flags,
        GHC.ST,
        GHC.Stack.CloneStack,
        GHC.StaticPtr,
        GHC.STRef,
        GHC.Show,
        GHC.Stable,
        GHC.StableName,
        GHC.Stack,
        GHC.Stack.CCS,
        GHC.Stack.Types,
        GHC.Stats,
        GHC.Storable,
        GHC.TopHandler,
        GHC.TypeError,
        GHC.TypeLits,
        GHC.TypeLits.Internal,
        GHC.TypeNats,
        GHC.TypeNats.Internal,
        GHC.Unicode,
        GHC.Weak,
        GHC.Weak.Finalize,
        GHC.Word,
        Numeric,
        Numeric.Natural,
        Prelude,
        System.CPUTime,
        System.Console.GetOpt,
        System.Environment,
        System.Environment.Blank,
        System.Exit,
        System.IO,
        System.IO.Error,
        System.IO.Unsafe,
        System.Info,
        System.Mem,
        System.Mem.StableName,
        System.Mem.Weak,
        System.Posix.Internals,
        System.Posix.Types,
        System.Timeout,
        Text.ParserCombinators.ReadP,
        Text.ParserCombinators.ReadPrec,
        Text.Printf,
        Text.Read,
        Text.Read.Lex,
        Text.Show,
        Text.Show.Functions,
        Type.Reflection,
        Type.Reflection.Unsafe,
        Unsafe.Coerce,
        -- TODO: remove
        GHC.IOPort

    reexported-modules:
          GHC.Num.Integer
        , GHC.Num.Natural
        , GHC.Num.BigNat

    -- OS Specific
    if os(windows)
        reexported-modules:
            GHC.IO.Encoding.CodePage.API,
            GHC.IO.Encoding.CodePage.Table,
            GHC.Conc.Windows,
            GHC.Conc.WinIO,
            GHC.Conc.POSIX,
            GHC.Conc.POSIX.Const,
            GHC.Windows,
            GHC.Event.Windows,
            GHC.Event.Windows.Clock,
            GHC.Event.Windows.ConsoleEvent,
            GHC.Event.Windows.FFI,
            GHC.Event.Windows.ManagedThreadPool,
            GHC.Event.Windows.Thread,
            GHC.IO.Handle.Windows,
            GHC.IO.Windows.Handle,
            GHC.IO.Windows.Encoding,
            GHC.IO.Windows.Paths

    else
        reexported-modules:
            GHC.Event

    if arch(js)
        reexported-modules:
            GHC.JS.Prim,
            GHC.JS.Prim.Internal,
            GHC.JS.Prim.Internal.Build

    -- We need to set the unit id to base (without a version number)
    -- as it's magic.
    ghc-options: -this-unit-id base

    -- Make sure we don't accidentally regress into anti-patterns
    ghc-options: -Wcompat -Wnoncanonical-monad-instances
